syntax = "proto3";

package pb;

option go_package = "github.com/yachnytskyi/golang-mongo-grpc/pb";

import "user.proto";

message RegisterUserInput {
    string name = 1;
    string email = 2;
    string password = 3;
    string passwordConfirm = 4;
}

message RegisterUserResponse { User user = 1; }
